webhook/main/default/objects/Inbound_Webhook_Setting__mdt/Inbound_Webhook_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores the inbound webhook settings initially to receive notification dispositions;</description>
    <label>NTFH Inbound Webhook Setting</label>
    <pluralLabel>NTFH Inbound Webhook Settings</pluralLabel>
</CustomObject>