webhook/main/default/objects/Inbound_Webhook_Setting__mdt/fields/Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret__c</fullName>
    <inlineHelpText>Base64 encoded shared secret between the webhook source and listener used to verify the content. If this field is empty, signature verification is skipped</inlineHelpText>
    <label>Shared Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>