webhook/main/default/objects/Inbound_Webhook_Setting__mdt/fields/Signature_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Header_Name__c</fullName>
    <inlineHelpText>Header name where the signature would be found;</inlineHelpText>
    <label>Signature Header Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>