webhook/main/default/objects/Inbound_Webhook_Setting__mdt/fields/Signing_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Signing_Algorithm__c</fullName>
    <description>Available signing algorithm from the Crypto.generateMac method</description>
    <label>Signing Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hmacSHA256</fullName>
                <default>true</default>
                <label>hmacSHA256</label>
            </value>
            <value>
                <fullName>hmacSHA512</fullName>
            </value>
            <value>
                <fullName>hmacMD5</fullName>
            </value>
            <value>
                <fullName>hmacSHA1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>