webhook/main/default/objects/Inbound_Webhook_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Signature_Header_Name__c</columns>
    <columns>Shared_Secret__c</columns>
    <columns>Signing_Algorithm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>